# -

./: CMakeLists.txt
.github/: copilot-instructions.md
db/: CMakeLists.txt
db/build-asan/: CMakeCache.txt  Makefile  cmake_install.cmake
db/build-asan/.qt/: QtDeploySupport.cmake
db/build-asan/test_dbmanager_autogen/: deps  moc_predefs.h
db/build-asan/test_dbmanager_autogen/include/: test_dbmanager.moc.d
db/build-debug/: CMakeCache.txt  ISCADA_DB  Makefile  TestMappedFileOper  cmake_install.cmake
db/build-debug/.qt/: QtDeploySupport.cmake
db/build-debug/ISCADA_DB_autogen/: deps
db/build-debug/TestMappedFileOper_autogen/: deps
db/build-debug/test_dbmanager_autogen/: deps  moc_predefs.h
db/build-debug/test_dbmanager_autogen/include/: test_dbmanager.moc  test_dbmanager.moc.d
db/include/core/: DBInitializer.h  DBManager.h  DynamicTable.h  MappedFileOper.h  common.h
db/include/utils/: ZipUtils.h  logger.h
db/src/: main.cpp
db/src/core/: DBInitializer.cpp  DBManager.cpp  DynamicTable.cpp  MappedFileOper.cpp
db/src/utils/: ZipUtils.cpp  logger.cpp
db/test/: TestMappedFileOper.cpp  test_dbmanager.cpp
include/core/: DBInitializer.h  DBManager.h  DynamicTable.h  MappedFileOper.h
include/utils/: ZipUtils.h  logger.h
src/: main.cpp
src/core/: DBInitializer.cpp  DBManager.cpp  DynamicTable.cpp  MappedFileOper.cpp
src/utils/: ZipUtils.cpp  logger.cpp
test/: test_dbmanager.cpp
